crates/nico-doctor/tests/snapshots/json_snapshot__unknown_timeout_layer.snap
---
source: crates/nico-doctor/tests/json_snapshot.rs
expression: v
---
{
  "layers": [
    {
      "checks": [
        {
          "name": "pods_ready",
          "status": "ok",
          "value": "2/2"
        }
      ],
      "duration_ms": 42,
      "name": "cluster",
      "status": "ok"
    },
    {
      "checks": [],
      "duration_ms": 5000,
      "name": "workflows",
      "status": "unknown"
    },
    {
      "checks": [],
      "duration_ms": 5000,
      "name": "grpc",
      "status": "unknown"
    }
  ],
  "namespace": "nico",
  "preflight": {
    "ok": true
  },
  "summary": {
    "fail": 0,
    "ok": 1,
    "skipped": 0,
    "unknown": 2,
    "warn": 0
  },
  "version": 1
}
